--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ SCOPUS_API_KEY=a950786997da82a0b77e430143bebaf1
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
-MYSQL_DATABASE=chatbot
+MYSQL_DATABASE=chatbot_test
